@@ -1,0 +1,19 @@
+<?php
+// $Id: views_test_plugin_access_test_static.inc,v 1.1.4.2 2011-01-04 21:26:47 dereine Exp $
+
+class views_test_plugin_access_test_static extends views_plugin_access {
+  function option_definition() {
+    $options = parent::option_definition();
+    $options['access'] = array('default' => FALSE);
+
+    return $options;
+  }
+
+  function access($account) {
+    return !empty($this->options['access']);
+  }
+
+  function get_access_callback() {
+    return array('views_test_test_static_access_callback', array(!empty($options['access'])));
+  }
+}
