@@ -1,5 +1,5 @@
 <?php
-// $Id: views_query.test,v 1.1.2.16 2010-12-17 21:51:42 dereine Exp $
+// $Id: views_query.test,v 1.1.2.17 2011-01-04 21:26:47 dereine Exp $
 
 /**
  * @file
@@ -142,6 +142,7 @@ abstract class ViewsSqlTest extends ViewsTestCase {
       $query->values($record);
     }
     $query->execute();
+    $this->checkPermissions(array(), TRUE);
   }
 
   /**
