@@ -1,5 +1,5 @@
 <?php
-// $Id: views_test.module,v 1.1.2.8 2010-12-17 21:51:42 dereine Exp $
+// $Id: views_test.module,v 1.1.2.9 2011-01-04 21:26:47 dereine Exp $
 
 /**
  * Implements hook_permission().
@@ -35,4 +35,12 @@ function views_test_views_data() {
  */
 function views_test_views_plugins() {
   return variable_get('views_test_views_plugins', array());
+}
+
+function views_test_test_static_access_callback($access) {
+  return $access;
+}
+
+function views_test_test_dynamic_access_callback($access, $argument1, $argument2) {
+  return $access && $argument1 == variable_get('test_dynamic_access_argument1', NULL) && $argument2 == variable_get('test_dynamic_access_argument2', NULL);
 }
