@@ -1,5 +1,5 @@
 <?php
-// $Id: views.module,v 1.341.4.49 2011-01-04 00:00:20 dereine Exp $
+// $Id: views.module,v 1.341.4.50 2011-01-04 21:26:47 dereine Exp $
 /**
  * @file
  * Primarily Drupal hooks and global API functions to manipulate views.
@@ -598,6 +598,12 @@ function views_access() {
 
     list($callback, $arguments) = $arg;
     $arguments = $arguments ? $arguments : array();
+    // Bring dynamic arguments to the access callback.
+    foreach ($arguments as $key => $value) {
+      if (is_int($value) && isset($args[$value])) {
+        $arguments[$key] = $args[$value];
+      }
+    }
     if (function_exists($callback) && call_user_func_array($callback, $arguments)) {
       return TRUE;
     }
